# RL-Agent-Playing-LunarLander-Game

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
include/: Constants.h  Lunar_Lander_Environment.h  NN.h  Physix.h  SafeQueue.h  Shader.h  Shape.h  Utilities.h  Vapor.h
legacy/: Environment.h  Log.txt  new 1.cpp  new 2.cpp
src/: Lunar_Lander_Environment.cpp  NN.cpp  Physix.cpp  Shape.cpp  Utilities.cpp  Vapor.cpp  main.cpp
